<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.activity.TentangAplikasiActivity">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/toolbar_2_item_user"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0dp"
        android:layout_margin="@dimen/dimen20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/versi_aplikasi"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />

            <TextView
                android:id="@+id/tvVersiName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_weight="1"
                android:text="@string/versi_aplikasi"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/nama_aplikasi"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/bahasa_pemrograman"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_weight="1"
                android:text="@string/kotlin"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/database"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_weight="1"
                android:text="@string/firebase"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>