<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        android:id="@+id/includeProgressBar"
        layout="@layout/progressbar_layout_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen40dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/image" />



        <LinearLayout
            android:id="@+id/layoutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dimen20dp"
                android:text="@string/silahkan_masuk_terlebih_dahulu"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/bemp_information"
                android:layout_marginStart="@dimen/dimen5dp"
                android:textColor="@color/colorc06eff"
                android:textSize="@dimen/tulisan16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
           style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvNim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/nim"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/kata_sandi"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="android:Widget.Material.Button.Borderless"
            android:layout_width="@dimen/dimen200dp"
            android:layout_height="@dimen/dimen35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen12dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            android:background="@drawable/bg_colorc06eff_rad4px"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/tulisan12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen40dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun"
                android:textSize="@dimen/tulisan12sp" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen4dp"
                android:text="@string/daftar"
                android:textColor="@color/colorff1f1f"
                android:textSize="@dimen/tulisan12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>