<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.activity.RegisterActivity">

    <include
        android:id="@+id/includeProgressBar"
        layout="@layout/progressbar_layout_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/includeToolbar"
            layout="@layout/toolbar_2_item_user"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen20dp"
            android:layout_marginEnd="@dimen/dimen20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvNim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/nim"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvNamaDepan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/nama_depan"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvNamaBelakang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/nama_belakang"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/spinProdi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            android:gravity="start"
            android:hint="@string/program_studi"
            android:padding="@dimen/dimen12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color99000000"
            android:textSize="@dimen/tulisan12sp"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_arrow_tint="@color/color99000000"
            app:spinner_divider_color="@color/color99000000"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.4dp"
            app:spinner_item_array="@array/prodi"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@color/white"
            app:spinner_popup_elevation="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            android:background="#66000000" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/kata_sandi"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDaftar"
            style="android:Widget.Material.Button.Borderless"
            android:layout_width="@dimen/dimen200dp"
            android:layout_height="@dimen/dimen35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen32dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            android:background="@drawable/bg_colorc06eff_rad4px"
            android:text="@string/daftar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/tulisan12sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>