<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.UbahPasswordActivity">

    <include
        android:id="@+id/includeProgressBar"
        layout="@layout/progressbar_layout_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <include
            android:id="@+id/includeToolbar"
            layout="@layout/toolbar_2_item_user"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen20dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/kata_sandi_baru"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordKonfirmasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/konfirmasi_kata_sandi_baru"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUbah"
            style="android:Widget.Material.Button.Borderless"
            android:layout_width="@dimen/dimen200dp"
            android:layout_height="@dimen/dimen35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen32dp"
            android:layout_marginEnd="@dimen/dimen20dp"
            android:background="@drawable/bg_colorc06eff_rad4px"
            android:text="@string/simpam"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/tulisan12sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>