<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.activity.DetailLombaActivity">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/toolbar_2_item_user"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/includeProgressBar"
        layout="@layout/progressbar_layout_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0dp"
        android:layout_marginEnd="@dimen/dimen4dp"
        android:fillViewport="true"
        android:scrollbarSize="@dimen/dimen2dp"
        android:scrollbarThumbVertical="@color/color45bbff"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnIkutLomba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen0dp"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen20dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvJudulLomba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen10dp"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/tulisan16sp" />

            <ImageView
                android:id="@+id/imgFoto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen200dp"
                android:layout_marginTop="@dimen/dimen20dp"
                android:contentDescription="@string/image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:layout_marginTop="@dimen/dimen32dp"
                android:textStyle="bold"
                android:textSize="@dimen/tulisan14sp"
                android:textColor="@color/black"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimen32dp"
                android:layout_marginTop="@dimen/dimen4dp"
                app:cardCornerRadius="@dimen/dimen8dp"
                app:cardElevation="@dimen/dimen0dp">

                <TextView
                    android:id="@+id/tvDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tulisan12sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIkutLomba"
        style="android:Widget.Material.Button.Borderless"
        android:layout_width="@dimen/dimen0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen32dp"
        android:background="@color/colorc06eff"
        android:text="@string/ikut_lomba"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/tulisan14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>